ncurses-6.3/menu/menu.h

  typedef void (*Menu_Hook) (struct tagMENU *);
/* --------- prototypes for libmenu functions ----------------------------- */

  extern MENU_EXPORT(ITEM **) menu_items(const MENU *);
  extern MENU_EXPORT(MENU *) new_menu(ITEM **);
  extern MENU_EXPORT(Menu_Hook) item_init(const MENU *);
  extern MENU_EXPORT(Menu_Hook) item_term(const MENU *);
  extern MENU_EXPORT(Menu_Hook) menu_init(const MENU *);
  extern MENU_EXPORT(Menu_Hook) menu_term(const MENU *);
  extern MENU_EXPORT(char *) menu_pattern(const MENU *);
  extern MENU_EXPORT(int) free_menu(MENU *);
  extern MENU_EXPORT(int) item_count(const MENU *);
  extern MENU_EXPORT(int) menu_driver(MENU *, int);
  extern MENU_EXPORT(int) set_item_init(MENU *, Menu_Hook);
  extern MENU_EXPORT(int) set_item_term(MENU *, Menu_Hook);
  extern MENU_EXPORT(int) set_menu_format(MENU *, int, int);
  extern MENU_EXPORT(int) set_menu_init(MENU *, Menu_Hook);
  extern MENU_EXPORT(int) set_menu_items(MENU *, ITEM **);
  extern MENU_EXPORT(int) set_menu_term(MENU *, Menu_Hook);
  extern MENU_EXPORT(void) menu_format(const MENU *, int *, int *);
  extern MENU_EXPORT(MENU *) NCURSES_SP_NAME(new_menu) (SCREEN *, ITEM **);